# rust-testing

./: .gitignore
game/: Cargo.toml
game/src/: main.rs
