[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.sdl2]
# version = "0.31.0" 0.31.0 wouldn't work, using version 0.36.0
features = ["bundled", "static-link"]

[dependencies]
gl = "0.10.0"